<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RobotsManagement</string>
    
    <string name="listTitle"><b>Lista robotow</b></string>
    
    <string name="addRobotButton">+</string>
    <string name="addRobotName">Nazwa:</string>
    <string name="addRobotIP">IP:</string>
    <string name="addRobotAccept">Dodaj</string>
    <string name="addRobotCancel">Anuluj</string>
    

    <!-- images descriptions -->
    <string name="cameraButtonDesc">Streaming live</string>
    <string name="moreInfoButtonDesc">Info z czujnikow</string>
    <string name="colliDrawButtonDesc">Rysowanie kolizji</string>
    <string name="mapComponentDesc">Glowny komponent mapy</string>
    <string name="onlineImgViewDesc">Ikona dostepnosci</string>
    <string name="offlineImgViewDesc">Ikona niedostepnosci</string>
    
    <string name="onlineText">Dostępny</string>
    <string name="offlineText">Niedostępny</string>    
    
    <string name="anonymousRobotName">Anonim</string>
    <string name="anonymousRobotIp">192.168.1.1</string>
    
    <string name="manageRobotsText">Wybierz operację, jaką chcesz wykonać:</string>
    <string name="manageRobotsReconnect">Połącz ponownie</string>
    <string name="manageRobotsDelete">Usuń</string>
    <string name="manageRobotsCancel">Anuluj</string>
    

</resources>
