<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="10dp" >
    	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/manageRobotsText"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    </LinearLayout>

    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="10dp" >
    	
    <Button
        android:id="@+id/manageRobotsRcBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" 
        android:text="@string/manageRobotsReconnect" />

    <Button
        android:id="@+id/manageRobotsDelBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/manageRobotsRcBut" 
        android:text="@string/manageRobotsDelete" />

    <Button
        android:id="@+id/manageRobotsCanBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" 
        android:text="@string/manageRobotsCancel" />
    
    </RelativeLayout>
 
</LinearLayout>